--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     // Gestisce array di badge per ogni utente
     const badges = { 
         "Kuki": ["https://i.postimg.cc/tR6FZvfB/Plank.png"], 
-        "Mihael": ["https://i.postimg.cc/L8SdK7Km/Wallsit.png"] 
+        "Mihael": ["https://i.postimg.cc/L8SdK7Km/Wallsit.png", "https://i.postimg.cc/63Fw4V3C/Battle-Rope.png"] 
     };
 
     let data = {};
