--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
     const photos = { "Kuki": "https://i.postimg.cc/XvBNJTXb/Kuki.jpg", "Lovro": "https://i.postimg.cc/XqHt9YDD/Lovro.jpg", "Mihael": "https://i.postimg.cc/X7PTJX5X/Mihael.jpg" };
     const badges = { 
         "Kuki": ["https://i.postimg.cc/tR6FZvfB/Plank.png"],
-        "Mihael": ["https://i.postimg.cc/L8SdK7Km/Wallsit.png", "https://i.postimg.cc/63Fw4V3C/Battle-Rope.png"]
+        "Mihael": ["https://i.postimg.cc/L8SdK7Km/Wallsit.png", "https://i.postimg.cc/63Fw4V3C/Battle-Rope.png"],
+        "Lovro": ["https://i.postimg.cc/Y08sP0Lx/Consistency-Leader.png"]
     };
 
     let data = {};
