--- a/index.html
+++ b/index.html
@@ -99,15 +99,16 @@
     const csvUrl = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSzWCvPzB5Gir_rDlyY_DpE0wkSAmk404HCgYC4sSVVH6G2p0fsRg48G6ZpkxYXPz4f1-6y33k2upqs/pub?gid=0&single=true&output=csv';
     const scriptUrl = 'https://script.google.com/macros/s/AKfycbx_3oQAL4pYFTR2Fbi84U4ufsBxJsb70c5oUxWx-dGaaY7wOHMg2u2WB3NTO2CugRJN/exec';
     
-    // --- Nuovi link Foto Profilo (Postimages Account) ---
     const photos = { 
         "Kuki": "https://i.postimg.cc/5tQ05jyn/Kuki.jpg", 
         "Lovro": "https://i.postimg.cc/9fwMPz0L/Lovro.jpg", 
         "Mihael": "https://i.postimg.cc/mr1D3hkp/Mihael.jpg",
-        "P. Sephiroth": "https://i.postimg.cc/CKn1Cd5t/Petar-Sephirot.jpg"
+        "P. Sephiroth": "https://i.postimg.cc/CKn1Cd5t/Petar-Sephirot.jpg",
+        "Ivona": "https://i.postimg.cc/LsgXkh5w/Ivona.png",
+        "Andrea": "https://i.postimg.cc/rpRmGzsh/Andrea-Femmina.jpg",
+        "Mihaela": "https://i.postimg.cc/CKn1Cd5Q/Mihaelaolder.jpg"
     };
 
-    // --- Nuovi link Badge (Postimages Account) ---
     const badges = { 
         "Kuki": ["https://i.postimg.cc/nrvB3CP6/Plank.png"],
         "Mihael": ["https://i.postimg.cc/hv9T2f5N/Wallsit.png", "https://i.postimg.cc/sfSYjNgP/Battle-Rope.png"],
