--- a/index.html
+++ b/index.html
@@ -107,15 +107,14 @@
         "Ivona": "https://i.postimg.cc/LsgXkh5w/Ivona.png",
         "Andrea": "https://i.postimg.cc/rpRmGzsh/Andrea-Femmina.jpg",
         "Mihaela": "https://i.postimg.cc/CKn1Cd5Q/Mihaelaolder.jpg",
-        "Ivana": "https://i.postimg.cc/JnLPjWF6/Ivana.jpg",
-        "Suzy": "https://i.postimg.cc/RFBXwzYg/Suzy.jpg"
+        "Suzy": "https://i.postimg.cc/RFBXwzYg/Suzy.jpg",
+        "Ivana": "https://i.postimg.cc/JnLPjWF6/Ivana.jpg"
     };
 
     const badges = { 
         "Kuki": ["https://i.postimg.cc/nrvB3CP6/Plank.png"],
         "Mihael": ["https://i.postimg.cc/hv9T2f5N/Wallsit.png", "https://i.postimg.cc/sfSYjNgP/Battle-Rope.png"],
         "Lovro": ["https://i.postimg.cc/mZMYL5g9/Consistency-Leader.png", "https://i.postimg.cc/ZRwp0tzz/Barhanging.png"]
-        "P. Sephiroth": ["https://i.postimg.cc/2jqWHXZc/20hrs_PT.png"]
     };
 
     let fullData = {}; 
