--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
         try {
             const t = Date.now();
             
-            // 1. Carica Anagrafica Atleti
+            // 1. Carica Atleti (Anagrafica)
             const aResp = await fetch(athletesUrl + '&t=' + t);
             const aText = await aResp.text();
             const aRows = aText.split(/\r?\n/).slice(1);
             athletesData = {};
             aRows.forEach(row => {
-                const cols = row.split(/,(?=(?:(?:[^"]*"){2})*[^"]*$)/);
+                const cols = row.split(/[;,](?=(?:(?:[^"]*"){2})*[^"]*$)/);
                 if(cols.length < 3) return;
                 const name = cols[0].trim().replace(/^"|"$/g, '');
                 const photo = cols[1].trim().replace(/^"|"$/g, '');
@@ -137,15 +137,14 @@
                 athletesData[name] = { photo, gender, badges: personalBadges.filter(l => l.length > 5) };
             });
 
-            // 2. Carica Esercizi (Colonne: Cliente, Area, Ex, Load, Notes, UP)
+            // 2. Carica Esercizi (1-Cliente, 2-Area, 3-Ex, 4-Load, 5-Notes, 6-UP)
             const eResp = await fetch(exercisesUrl + '&t=' + t);
             const eText = await eResp.text();
             const eRows = eText.split(/\r?\n/).slice(1);
             workoutData = {};
             eRows.forEach(row => {
-                const cols = row.split(/,(?=(?:(?:[^"]*"){2})*[^"]*$)/);
+                const cols = row.split(/[;,](?=(?:(?:[^"]*"){2})*[^"]*$)/);
                 if(cols.length < 4) return;
-                
                 const name = cols[0].trim().replace(/^"|"$/g, '');
                 const area = cols[1].trim().replace(/^"|"$/g, '');
                 const ex = cols[2].trim().replace(/^"|"$/g, '');
@@ -162,7 +161,7 @@
             const bText = await bResp.text();
             const bRows = bText.split(/\r?\n/).slice(1);
             badgesLibrary = bRows.map(row => {
-                const [title, link, note] = row.split(/,(?=(?:(?:[^"]*"){2})*[^"]*$)/).map(c => c.trim().replace(/^"|"$/g, ''));
+                const [title, link, note] = row.split(/[;,](?=(?:(?:[^"]*"){2})*[^"]*$)/).map(c => c.trim().replace(/^"|"$/g, ''));
                 return { title, link, note };
             }).filter(b => b.link);
 
