--- a/index.html
+++ b/index.html
@@ -130,15 +130,16 @@
     </div>
 </div>
 
-<div id="privacy-disclaimer" class="footer-container">
+<div class="footer-container">
     <div class="powered-by">
         <span>Powered by</span>
         <img src="https://i.postimg.cc/6Q1gJjvY/Roninlogooriginal.png" class="ronin-logo-small">
     </div>
     <div class="privacy-footer">
-        <p><b>HR:</b> Vaša privatnost nam je važna. Ako želite biti uklonjeni iz aplikacije, obratite se svojim PT-ima.</p>
-        <p><b>IT:</b> La tua privacy è importante. Se desideri non far più parte dell'app, rivolgiti ai tuoi PT.</p>
-        <p><b>EN:</b> Your privacy matters. If you wish to be removed from the app, please contact your PTs.</p>
+        <p>HR: Vaša privatnost nam je važna. Ako želite biti uklonjeni iz aplikacije, obratite se svojim PT-ima. Molimo vas da ne dijelite poveznicu aplikacije ni sa kim. Ovo je privatna aplikacija rezervirana za Warehouse grupu.</p>
+        <p>IT: La tua privacy è importante. Se desideri non far più parte dell'app, rivolgiti ai tuoi PT. Per favore non condividere il link dell'app con nessuno. È un'app privata riservata al gruppo di Warehouse.</p>
+        <p>EN: Your privacy matters. If you wish to be removed from the app, please contact your PTs. Please do not share the app link with anyone. It is a private app reserved for the Warehouse group.</p>
+        <p>JP: プライバシーは重要です。アプリからの削除を希望される場合は、PTにご連絡ください。アプリのリンクを誰にも共有しないでください。これは Warehouse グループ専用のプライベートアプリです。</p>
     </div>
 </div>
 
